<resources>
    <string name="app_name">Gtrain</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="custom_tab_label">Custom</string>
    <string name="exercise_tab_label">Exercise</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bg_image">bg_image</string>
    <string name="start_workout">Start workout</string>
    <string name="exercise">Exercise</string>
    <string name="exercises">Exercises</string>
    <string name="weight_kg">WEIGHT(KG)</string>
    <string name="repetitions">REPETITIONS</string>
    <string name="info">info</string>
    <string name="playicon">playIcon</string>
    <string name="swipe_to_see_next">Swipe to see next</string>
    <string name="today">TODAY</string>
    <string name="calendar_icon">calendar_icon</string>
    <string name="cancel">CANCEL</string>
    <string name="weight">WEIGHT</string>
    <string name="reps">REPS</string>
    <string name="add_button">add_button</string>
    <string name="quote_1">‘What hurts today makes you stronger tomorrow.’</string>
    <string name="jay_cutler">Jay Cutler</string>
</resources>