<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.graphFragment.GraphFragment">

    <include
        android:id="@+id/toolbar"
        layout="@layout/exercise_list_fr_toolbar"
        app:layout_constraintTop_toTopOf="parent" />

    <nl.bryanderidder.themedtogglebuttongroup.ThemedToggleButtonGroup
        android:id="@+id/toggleButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:padding="16dp"
        app:justifyContent="center"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:toggle_selectAnimation="circular_reveal"> <!-- this attribute is from the underlying FlexboxLayout -->

        <nl.bryanderidder.themedtogglebuttongroup.ThemedButton
            android:id="@+id/btnReps"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            app:toggle_backgroundColor="@color/dark_grey"
            app:toggle_selectedBackgroundColor="@color/light_blue"
            app:toggle_selectedTextColor="@color/black"
            app:toggle_text="Repetitions"
            app:toggle_textColor="@color/light_grey" />

        <nl.bryanderidder.themedtogglebuttongroup.ThemedButton
            android:id="@+id/btnWeights"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            app:toggle_backgroundColor="@color/dark_grey"
            app:toggle_selectedBackgroundColor="@color/light_blue"
            app:toggle_selectedTextColor="@color/black"
            app:toggle_text="Weights"
            app:toggle_textColor="@color/light_grey" />

        <nl.bryanderidder.themedtogglebuttongroup.ThemedButton
            android:id="@+id/btnPerformance"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            app:toggle_backgroundColor="@color/dark_grey"
            app:toggle_selectedBackgroundColor="@color/light_blue"
            app:toggle_selectedTextColor="@color/black"
            app:toggle_text="Performance"
            app:toggle_textColor="@color/light_grey" />


    </nl.bryanderidder.themedtogglebuttongroup.ThemedToggleButtonGroup>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toggleButton">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/graphBlock"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:layout_margin="10dp" />

            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:textColor="@color/light_grey" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvLogs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp" />
        </LinearLayout>


    </androidx.core.widget.NestedScrollView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvInputDialog"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="16dp"
        android:visibility="gone"
        app:cardBackgroundColor="@color/divider_color"
        app:cardCornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.35" />

            <ImageView
                android:id="@+id/ivCalendar"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="@string/calendar_icon"
                android:src="@drawable/ic_calendar"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvSelectedDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:fontFamily="@font/main_title_font_2"
                android:text="@string/today"
                android:textColor="@color/light_blue"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="@id/ivCalendar"
                app:layout_constraintLeft_toRightOf="@+id/ivCalendar"
                app:layout_constraintTop_toTopOf="@+id/ivCalendar" />

            <TextView
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:fontFamily="@font/main_title_font_2"
                android:text="@string/cancel"
                android:textColor="@color/light_blue"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="@+id/tvSelectedDate"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tvSelectedDate" />

            <LinearLayout
                android:id="@+id/weightInputBlock"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:background="@drawable/input_field_dark_bg"
                android:orientation="vertical"
                android:padding="4dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="@id/guideline">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:gravity="center"
                    android:text="@string/weight"
                    android:textColor="@color/light_blue"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/etWeight"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:gravity="center"
                    android:inputType="number"
                    android:textColor="@color/light_blue"
                    android:textSize="32sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/repsInputBlock"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:background="@drawable/input_field_dark_bg"
                android:orientation="vertical"
                android:padding="4dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/guideline">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:gravity="center"
                    android:text="@string/reps"
                    android:textColor="@color/light_blue"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/etReps"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:gravity="center"
                    android:inputType="number"
                    android:textColor="@color/light_blue"
                    android:textSize="32sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/btnUpdateRecord"
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cardBackgroundColor="@color/light_blue"
                app:cardCornerRadius="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/guideline">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/add_button"
                    android:src="@drawable/ic_update"
                    app:tint="@color/divider_color" />
            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>